# deleterious

./: .bazelrc  .gitignore  .golangci.yml  .goreleaser.yml  .mergify.yml  .yamllint.yml  BUILD.bazel  CLAUDE.md  CODE_OF_CONDUCT.md  Dockerfile  README.md  SECURITY.md  WORKSPACE  cobra.BUILD.patch  codecov.yml  dummy.go  go.mod  go.sum  goreleaser-post-hook.sh  install.sh  main.go  main_test.go  renovate.json  vendor.sh  version.bzl
.claude/: settings.local.json
.claude/hooks/: session-start.sh
.github/: CODEOWNERS  main.workflow  release-drafter.yml
.github/workflows/: automerge.yml  ci.yaml  codeql-analysis.yml  lint.yml  push.yml  release-drafter.yml  release-publisher.yml  scorecards-analysis.yml  scorecards.yml  semgrep-analysis.yml
cmd/: BUILD.bazel  dryrun.go  ecr.go  ecr_test.go  keys.go  orphaned.go  orphaned_test.go  root.go
cmd/mocks/: BUILD.bazel  CloudformationAPI.go  DynamoDBAPI.go  EcrAPI.go  KinesisAPI.go  KmsAPI.go  LambdaAPI.go  LogsAPI.go  S3API.go
scripts/: bazel_fetch_deps.sh  entrypoint.sh
